@@ -69,6 +69,8 @@ New Features
 
 * SOLR-7986: JDBC Driver for SQL Interface (Uwe Schindler, Joel Bernstein)
 
+* SOLR-8038: Add the StatsStream to the Streaming API and wire it into the SQLHandler (Joel Bernstein)
+
 Optimizations
 ----------------------
 * SOLR-7876: Speed up queries and operations that use many terms when timeAllowed has not been
